started to add error checking